--- a/index.css
+++ b/index.css
@@ -20,7 +20,7 @@ h2 {
     margin: 5px;
 }
 
-#title {
+section {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -32,11 +32,30 @@ h2 {
     background-size: cover;
 }
 
-#title div {
+
+section div {
     text-align: center;
 }
 
-#title div img {
+p {
+    background-color: white;
+    padding: 20px;
+    border-radius: 10px;
+}
+
+p,a {
+    font-family: 'Poppins', sans-serif;
+    font-size: 2ch;
+    color: black;
+    margin: 5px;
+}
+
+a {
+    font-size: 1.5ch;
+}
+
+
+section div img {
     width: auto;
     height: 25px;
     filter: drop-shadow(2px 2px 10px #3a3a3a);
