--- a/index.css
+++ b/index.css
@@ -8,14 +8,12 @@ h1 {
     font-family: 'Poppins', sans-serif;
     font-size: 6ch;
     color: white;
-    text-shadow: 2px 2px 10px #3a3a3a;
     margin: 5px;
 }
 h2 {
     font-family: 'Poppins', sans-serif;
     font-size: 3ch;
     color: white;
-    text-shadow: 2px 2px 10px #3a3a3a;
     font-weight: 600;
     margin: 5px;
 }
@@ -24,12 +22,38 @@ section {
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 100vh;
     width: 100vw;
-    background-image: url(photo4.jpeg);
+    border-bottom: 10px solid #4287f5;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+}
+
+.title {
+    height: 80vh;
+    
+}
+
+#hometitle {
+    background-image: url(photo4.jpeg);
+}
+
+#robottitle {
+    background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSFepCBxLiZNFcBFozeg5ZWrdy_69zIOEJis4uQ4MboxOBw5t5LtySpytXKDiHpULJXDwo:https://media.cnn.com/api/v1/images/stellar/prod/230822164529-05-apptronik-apollo-robot.jpg%3Fc%3Doriginal&usqp=CAU);
+}
+
+#sponsortitle {
+    background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTc4UB0Kxe62MCEb0BBFZBbTHGaRPF3Z-ZQS7AXyeoG7qLu4OKOo0OHPGENcphX9hmFROc:https://cdn2.hubspot.net/hubfs/53/Untitled%2520design-14.png&usqp=CAU);
+}
+
+#contacttitle {
+    background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTJ3sntMpB_0aK74cEAhBUtkv0sObB6ImCtdX7V-8cae6NXbnW0qKQyAQpTX_HBUeWgQe0:https://t3.ftcdn.net/jpg/00/00/61/08/360_F_610851_0CMfy8H5t3hVJ6l4jWKlvjWpdHEXKG.jpg&usqp=CAU);
+}
+
+.titlecenter {
+    background-color: #4287f5;
+    border-radius: 10px;
+    padding: 20px;
 }
 
 
@@ -37,13 +61,20 @@ section div {
     text-align: center;
 }
 
-p {
-    background-color: white;
-    padding: 20px;
-    border-radius: 10px;
+.titlecenter p,a {
+    color: white;
 }
 
-p,a {
+.blurb {
+    padding-top: 10vh;
+    padding-bottom: 10vh;
+}
+
+.blurb div {
+    width: 75vw;
+}
+
+p,a  {
     font-family: 'Poppins', sans-serif;
     font-size: 2ch;
     color: black;
@@ -54,12 +85,46 @@ a {
     font-size: 1.5ch;
 }
 
+header {
+    height: 10vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #4287f5;
+    position: sticky;
+    top: 0px;
 
-section div img {
+}
+
+header div {
+    height:40px;
+    width: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 30px;
+}
+
+header div img {
     width: auto;
-    height: 25px;
-    filter: drop-shadow(2px 2px 10px #3a3a3a);
-    padding: 10px
+    height: 30px;
+    transition-duration: 0.4s;
+}
+
+header div img:hover {
+    width: auto;
+    height: 35px;
+}
+
+footer {
+    height: 10vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #4287f5;
+}
+footer p {
+    color: white;
 }
 
 a {
